--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "test": " ",
     "start": "nodemon index.js"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "author": "Kristab",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "nodemon": "^2.0.6"
   }
 }
+
